branching to features

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="/stylesheets/stylesheet.css" />
     </head>
     <body>
-        {{body}}
+        <nav>
+            <a href="">Home</a>
+            <a href="">Dashboard</a>
+            <a href="">Log In</a>
+        </nav>
+        <h1>Tech Blog</h1>
+        {{{body}}}
     </body>
 </html>
