--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,12 +7,18 @@
         <link rel="stylesheet" href="/stylesheets/stylesheet.css" />
     </head>
     <body>
-        <nav>
-            <a href="">Home</a>
-            <a href="">Dashboard</a>
-            <a href="">Log In</a>
-        </nav>
-        <h1>Tech Blog</h1>
+        <header>
+            <div id="top">
+                <nav>
+                    <a href="">HOME</a>
+                    <a href="">DASHBOARD</a>
+                    <div id="log-in-link">
+                        <a href="">LOG IN</a>
+                    </div>
+                </nav>
+            </div>
+            <h1>TECH BLOG</h1>
+        </header>
         {{{body}}}
     </body>
 </html>
