--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    padding: 1em;
+    padding: 1.5em;
     background-color: #06aed5;
 }
 
@@ -36,14 +36,23 @@ header h1 {
     letter-spacing: 0.25em;
 }
 
-/* article {
-} */
-
 .title {
     font-size: larger;
 }
 
-.sign-up-form {
-    display: flex;
-    flex-direction: column;
+form > * {
+    margin-top: 1em;
+    margin-left: 1.5em;
+}
+
+form label,
+form button {
+    display: block;
+}
+
+form button {
+    border: none;
+    color: #fbe474;
+    background-color: #086788;
+    padding: 0.25em;
 }
