--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,12 +17,13 @@
 <form class="login-form">
     <div>
         <label for="login-email">E-Mail</label>
-        <input type="text" name="login-email" id="#login-email" />
+        <input type="text" name="login-email" id="login-email" />
     </div>
     <div>
         <label for="login-password">Password</label>
         <input type="password" name="login-password" id="login-password" />
     </div>
+    <button type="submit">Log In</button>
 </form>
 
 <script src="/javascript/login.js"></script>
